kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
    name: vprodb # this name should tally with that of the mysql uri as defined in the application.properties file in java - i.e - jdbc:mysql://"vprodb:3306". tHE SERVICENAME WITH PORT NUMBER
spec:
    ports:
        - port: 3306
          protocol: TCP
          targetPort: vprodb-port #This can also be the actua; port number - 3306
    selector:
        app: vprodb
    type: ClusterIP
