kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
    name: vprocache01 # this name should tally with that of the mysql uri as defined in the application.properties file in java - i.e - jdbc:mysql://"vprodb:3306". tHE SERVICENAME WITH PORT NUMBER
spec:
    ports:
        - port: 11211
          protocol: TCP
          targetPort: vpromc-port #This can also be the actua; port number - 3306
    selector:
        app: vpromc
    type: ClusterIP
