kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vpro-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: vprofile.dimaobi.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: vproapp-service
                            port:
                                number: 8080
